Refactor : game-service API 총 정리 및 JWT 의존성 추가